@@ -44,6 +44,7 @@ enum SolverReturn
 DECLARE_STD_EXCEPTION(LOCALLY_INFEASIBLE);
 DECLARE_STD_EXCEPTION(TOO_FEW_DOF);
 DECLARE_STD_EXCEPTION(TINY_STEP_DETECTED);
+DECLARE_STD_EXCEPTION(STEP_COMPUTATION_FAILED);
 DECLARE_STD_EXCEPTION(ACCEPTABLE_POINT_REACHED);
 DECLARE_STD_EXCEPTION(FEASIBILITY_PROBLEM_SOLVED);
 DECLARE_STD_EXCEPTION(INVALID_WARMSTART);
